# yew-basic

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: app.rs
