[package]
name = "yew-basic"
version = "0.1.0"
edition = "2021"
description = "basic yew application"
readme = "README.md"
repository = "https://github.com/ivandejanovic/yew-basic"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
web-sys = { version = "0.3.69" }
